# server/docs/swagger.json
@@ -4820,9 +4820,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "{\"code\":0}",
                         "schema": {
-                            "$ref": "#/definitions/web_tools.TransferResponse"
+                            "type": "string"
                         }
                     }
                 }
@@ -5543,6 +5543,10 @@
                 "fees": {
                     "description": "手续费",
                     "type": "integer"
+                },
+                "fees_hash": {
+                    "description": "手续费hash",
+                    "type": "string"
                 },
                 "from": {
                     "description": "出售人钱包地址",
@@ -6512,6 +6516,10 @@
                     "description": "手续费",
                     "type": "integer"
                 },
+                "fees_hash": {
+                    "description": "手续费hash",
+                    "type": "string"
+                },
                 "from": {
                     "description": "出售人钱包地址",
                     "type": "string"
@@ -7379,7 +7387,7 @@
                 },
                 "fees": {
                     "description": "手续费",
-                    "type": "integer"
+                    "type": "object"
                 },
                 "order": {
                     "description": "卡牌转让订单",
@@ -7390,8 +7398,8 @@
                     "$ref": "#/definitions/model.AvfOrderCard"
                 },
                 "price": {
-                    "description": "最低价格",
-                    "type": "integer"
+                    "description": "最低价格百分比",
+                    "type": "object"
                 },
                 "today": {
                     "description": "今日收益",
